--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.DailyFootprint"
         tools:targetApi="31">
         <activity
+            android:name=".ui.mypage.MyPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.friendAlert.FriendAlertActivity"
             android:exported="false" />
         <activity
