--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,16 +39,21 @@
             android:label="@string/title_activity_maps"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             >
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+            </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+
         <activity
             android:name=".ui.login.SignUpActivity"
             android:exported="false" />
