[fix] 시작 요일 변경, 프로그래스바 색상 표시 오류 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
             android:exported="false" />
 
         <activity
-            android:name=".ui.dashboard.ChallengeActivity"
+            android:name=".ui.dashboard.ChallengeviewActivity"
             android:exported="false" />
 
         <activity
